--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 #p_exocard div[data-role="header"]{
-    background-color: #e84c3d;
+    background-color: #66aeaa;
     border-style: none;
 }
 #nav-panel{
